--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,21 @@
 
     <groupId>org.example</groupId>
     <artifactId>MavinOnlineChatGBHW</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>client</module>
+        <module>server</module>
+    </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.34.0</version>
+        </dependency>
+
+    </dependencies>
 
 
 </project>
